gcc/testsuite/rust/rustc/ui/issues/issue-3477.rs
fn main() {
    let _p: char = 100;
// { dg-error ".E0308." "" { target *-*-* } .-1 }
// { dg-error ".E0308." "" { target *-*-* } .-2 }
}

